--- a/.env
+++ b/.env
@@ -6,12 +6,18 @@ APP_URL=https://temporal92.grupolizame.com
 
 LOG_CHANNEL=stack
 
+#DB_CONNECTION=mysql
+#DB_HOST=grupolizame.com
+#DB_PORT=3306
+#DB_DATABASE=grupoliz_temporal92
+#DB_USERNAME=grupoliz_tempora
+#DB_PASSWORD=temporal92
 DB_CONNECTION=mysql
-DB_HOST=grupolizame.com
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=grupoliz_temporal92
-DB_USERNAME=grupoliz_tempora
-DB_PASSWORD=temporal92
+DB_USERNAME=root
+DB_PASSWORD=Super_Digital
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
