--- a/.env
+++ b/.env
@@ -1,23 +1,17 @@
 APP_NAME="Mi Negocio"
 APP_ENV=production
 APP_KEY=base64:rdwdLmN070dzetYHyzgjQjC0crJR39W8FxzQC14g+jY=
-APP_DEBUG=false
-APP_URL=https://temporal92.grupolizame.com
+APP_DEBUG=true
+APP_URL=https://devtemporal92.grupolizame.com
 
 LOG_CHANNEL=stack
 
-#DB_CONNECTION=mysql
-#DB_HOST=grupolizame.com
-#DB_PORT=3306
-#DB_DATABASE=grupoliz_temporal92
-#DB_USERNAME=grupoliz_tempora
-#DB_PASSWORD=temporal92
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=grupolizame.com
 DB_PORT=3306
 DB_DATABASE=grupoliz_temporal92
-DB_USERNAME=root
-DB_PASSWORD=Super_Digital
+DB_USERNAME=grupoliz_tempora
+DB_PASSWORD=temporal92
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
